--- a/Buenas-noches-abi.html
+++ b/Buenas-noches-abi.html
@@ -165,26 +165,8 @@ function escribirTexto(texto){
 }
 
 function mostrarMensaje(){
-const texto=`Quiero que esta noche puedas descansar tranquila y que sepas que sin importar el día, la hora o el lugar siempre te voy a amar.
-
-Quiero que cierres los ojos sabiendo que siempre pienso en ti antes de dormir, cuando me levanto y en cada momento del día.
-
-Que aunque mi vida se esté cayendo a pedazos, mi amor por ti siempre será el mismo y crecerá cada día más.
-
-No importa la distancia.
-No importa el silencio.
-Siempre te amaré.
-
-Amo esa sonrisa que incluso en mi peor día logra iluminarme.
-Amo tu voz que me tranquiliza.
-Amo esos ojos tuyos que me traen una paz que no encuentro en ningún lado.
-
-Y sobre todo, te amo a ti.
-
-Que sueñes con lo que más feliz te hace.
-Que descanses en calma.
-
-Buenas noches mi hermosa Abi.
+const texto=`Quiero que esta noche puedas descansar tranquila y que sepas que sin importar el dia la hora o el lugar siempre te voy a amar, quiero cierres los ojos sabiendo que siempre pienso en ti antes de dormir, cuando me levanto y en cada momento del día, que aunque mi vida se este cayendo a pedazos mi amor por ti siempre sera el mismo y crecera cada dia mas y no importa la distancia, no importa el silencio que a veces haya siempre te amare, amare esa sonrisa que aunque tenga el peor dia de mi vida siempre me hara sonreír, amare esa dulce voz que siempre me tranquiliza en mis peores momentos, amo esos ojos tuyos que me traen una paz que no encontare en ningun lado, y sobre todo te amo a ti porque eres quien desde un inicio me hizo sentir verdaderamente lo que es amar con cuerpo y alma a alguien, que eres con la mujer que suelo hasta despierto, que eres el amor que siempre soñe tener con alguien, y además amo todo de ti, tu carácter fuete, tu amabilidad, tu carisma y también centímetro de tu cuerpo es lo mas hermoso que jamas vi, y por eso siempre deseo protegerte, cuidarte y ayudarte, porque tu eres mi mundo y daria lo que fuera para que estes bien. y por eso quiero desearte que sueñes con lo que mas feliz te hace y tengas una muy hermosa noche. 
+Buenas noches mi hermosa abi
 Te amo.`
 
     escribirTexto(texto);
